--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,16 +1,29 @@
+:root {
+    --footer-height: 128px;
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
+}
+
+footer {
+    height: var(--footer-height);
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.wrapper {
+    min-height: calc(100vh - var(--footer-height));
 }
