--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -17,12 +17,8 @@ a {
 }
 
 select {
-    background: transparent;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
-    background-repeat: no-repeat;
     background-position-x: 100%;
-    background-repeat: no-repeat;
-    background-position: right .75rem center;
+    background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e") no-repeat right .75rem center;
     background-size: 16px 12px;
 }
 
@@ -41,7 +37,7 @@ footer {
 .popup {
     &-content {
         width: 85%;
-    
+
         @media (min-width: 992px) {
             width: 60%;
         }
